--- a/index.html
+++ b/index.html
@@ -1,27 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Kassandra Anderson</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Welcome to my personal website</h1>
-				<p> Kassandra Anderson, NSF Graduate Research Fellow at Cornell University <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:kra46@cornell.edu">email</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Kassandra Anderson
+---
+<div class="blurb">
+	<h1>Welcome to my personal website</h1>
+	<p>Kassandra Anderson, NSF Graduate Research Fellow at Cornell University <a href="/about">About me...</a></p>
+</div><!-- /.blurb -->
